# coinduction

./: .gitignore  .lia.cache  .nia.cache  CHANGELOG  CodeMeta.json  LICENSE  Makefile  README  README.md  TODO.txt  _CoqProject  _RocqProject  cawu_reification.mlpack  cawu_reification_i.mlg  ccs.v  coinduction.v  coq-coinduction.opam  divergence.v  lattice.v  reification.ml  reification.mli  reification.mlpack  reification_g.mlg  reification_i.mlg  rel.v  rocq-coinduction.opam  streams.v  tactics.v  tests.v
.github/workflows/: docker-action.yml
src/: reification.ml  reification.mli  reification_g.mlg
theories/: all.v  companion.v  lattice.v  rel.v  tactics.v  tests.v  tower.v
